# nvnet

./: Cargo.toml  build.cmd
libnveth/: Cargo.toml  build.cmd
libnveth/src/: adapter.rs  debug.rs  device.rs  driver.rs  ioctl.rs  lib.rs  list.rs  net.rs  peer.rs  recv.rs  send.rs  socket.rs  worker.rs
libnveth/src/crypto/: aes_gcm.rs  chacha20.rs  poly1305.rs
libnveth/src/os/: event.rs  thread.rs
libnveth/src/windows/: macros.rs  prelude.rs
libnveth/src/windows/km/: mod.rs  ntddk.rs  ntifs.rs  wdm.rs  xfilter.rs
libnveth/src/windows/shared/: bcrypt.rs  mod.rs  ntdef.rs  ws2ipdef.rs
libnveth/src/windows/wdf/kmdf/: mod.rs  wdfdevice.rs  wdfdriver.rs  wdffileobject.rs  (+5 more)
nvnet/: Cargo.toml  build.rs
nvnet-driver/: Cargo.toml  package.cmd
nvnet-driver/src/: adapter.rs  debug.rs  device.rs  driver.rs  fragment.rs  lib.rs  panic.rs
nvnet-driver/src/crypto/: mod.rs
nvnet-driver/src/linked/: iter.rs  mod.rs  queue.rs
nvnet-driver/src/ndis/: chain.rs  mod.rs  pool.rs
nvnet-driver/src/os/: event.rs  lock.rs  memory.rs  mod.rs  request.rs  socket.rs  sync.rs  thread.rs
nvnet-driver/src/windows/: ext.rs  macros.rs  mod.rs  result.rs
nvnet-driver/src/windows/km/: mod.rs  ndis.rs  ntddk.rs  ntifs.rs  wdm.rs  wsk.rs
nvnet-driver/src/windows/shared/: bcrypt.rs  dpfilter.rs  guiddef.rs  ifdef.rs  ipifcons.rs  mod.rs  netiodef.rs  ntddndis.rs  ntdef.rs  ntstatus.rs  ws2def.rs  ws2ipdef.rs
nvnet/src/: bindings.rs  device.rs  error.rs  ext.rs  ioctl.rs  main.rs
nvnet/src/crypto/: ecdh.rs
nvnet/src/windows/: mod.rs
nvnet/src/windows/km/: mod.rs  ntddk.rs
(+99 files in other folders)
