[package]
name = "libnveth"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"
lto = "thin" # work around undefined symbol _fltused

[profile.release]
panic = "abort"

[dependencies]
libnveth_macros = { path = "../libnveth_macros" }
shared = { path = "../shared" }
winapi = { version = "0.3", features = ["impl-default", "bcrypt", "ntstatus"] }
